# chatroom_project

./: .gitignore  README.md  app.py  chatroom.db  db.py  docker-compose.yml  example_usage.py  history_io.py  message_history.py  message_history_service.py  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  cd.yml  ci-cd.yml  ci.yml  pythin-ci-lint.yml
chatroom_prototype/: app.py  db.py  history_io.py  message_history_service.py  models.py
docker/: Dockerfile.history  Dockerfile.web
k8s/: deployment-history.yaml  deployment-web.yaml  history-deployment.yaml  history-service.yaml  ingres.yaml  nats-deployment.yaml  nats-service.yaml  web-deployment.yaml  web-service.yaml
message_history/: server_1_history.jsonl
public/: index.html
tests/: test_api.py  test_db.py  test_message_history.py
